--- a/CSS/style-petshop.css
+++ b/CSS/style-petshop.css
@@ -1,4 +1,4 @@
-/*reset nos espaços*/
+
 *{
     margin: 0%;
     padding: 0%;
@@ -6,7 +6,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
-/*topo*/
+
 header{
     text-align: center;
     padding: 10px 0;
@@ -36,7 +36,6 @@ nav a{
 nav a:hover{
     color:#6dd432
 }
-/*secao 1*/
 .fundo-verde{
     background-color: #bdff9c;
 }
@@ -49,6 +48,61 @@ nav a:hover{
     width: 430px;
 }
 .flex-container{
-    display: flex;
+    display:flex;
     justify-content:space-between;
+}
+.produtos{
+    width: 235px;
+}
+.produtos figure{
+    border: 1px solid #c4c4c4;
+    background-color: #fff;
+    margin: 0 0 15px 0;
+    padding: 0;
+    text-align: center;
+    height: 160px;
+    line-height: 160px;
+}
+.produtos figure img{
+    vertical-align: middle;
+}
+.texto-centralizado{
+    text-align: center;
+}
+.btn-pata{
+    border: 1px solid #91e467;
+    background-color: #d2fbbd;
+    display: inline-block;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: #000;
+    border-radius: 5px;
+    cursor: pointer;
+}
+form{
+    width: 380px;
+}
+form input,
+form textarea{
+    width: 100%;
+    border: 1px solid #6dd432;
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+iframe{
+    width: 100%;
+}
+h2{
+    text-transform: uppercase;
+    margin-bottom: 15px ;
+}
+#produto .flex-container, #contato .flex-container{
+    margin-top: 43px;
+}
+
+.container {
+    text-align: center;
+
+
 }
